fix sizing issues when using on mobile device

--- a/Web/styles.css
+++ b/Web/styles.css
@@ -53,7 +53,7 @@ html, body {
   padding: 15px 30px;
   text-decoration: none;
   border-radius: 30px;
-  font-size: 1rem;
+  font-size: 1.15rem;
   transition: background-color 0.3s, transform 0.2s;
   margin-top: auto;
   box-shadow: 0 0px 30px white;
@@ -336,7 +336,7 @@ footer p {
 .repo-stats {
   flex: 1;
   max-width: 30%;
-  padding: 20px;
+  padding: 0px;
   text-align: center;
 }
 
